--- a/suzpage.css
+++ b/suzpage.css
@@ -2,7 +2,7 @@
     color: black;
     margin-left: 5%; 
     margin-right: 10%;
-    background-color: #ffffe6; 
+    background-color: white; 
     font-family: Georgia, "Times New Roman", Times, serif;
     padding-left: 11em }
   div.box {
