--- a/suzpage.css
+++ b/suzpage.css
@@ -53,7 +53,7 @@
     position: absolute;
     top: 2em;
     left: 1em;
-    width: 9em }
+    }
   ul.navbar li {
     background: #dddddd; 
     margin: 0.5em 0;
