Overall CSS Div Background

--- a/suzpage.css
+++ b/suzpage.css
@@ -12,8 +12,9 @@
     margin-top: 1em;
     margin-bottom: 3em;
     text-align: center;
-    width: 100%;
-    background: #dddddd} 
+    width: 100%; 
+    background: #f7e4e0;
+    } 
   box2 {
     border: solid;
     border-width: thin;
