--- a/suzpage.css
+++ b/suzpage.css
@@ -13,7 +13,7 @@
     margin-bottom: 3em;
     text-align: center;
     width: 100%; 
-    background: #f7e4e0;
+    background: #FAF0ED;
     } 
   box2 {
     border: solid;
