Durer Story - Life Background Color
Update to white

--- a/Durer_Story/css/durer.css
+++ b/Durer_Story/css/durer.css
@@ -68,7 +68,7 @@ life {
     text-align: center;
     width: 100%;
     padding-left: 1em;
-    background-color: #ffffea;
+    background-color: white;
   } 
 world {
     font-family: 'Old Standard TT', serif; Georgia;
