--- a/Durer_Story/css/durer.css
+++ b/Durer_Story/css/durer.css
@@ -65,7 +65,7 @@ life {
     color: #a37d49;
     margin-top: 1em;
     margin-bottom: 3em;
-    text-align: center;
+    text-align: left;
     width: 100%;
     padding-left: 1em;
     background-color: white;
@@ -77,7 +77,7 @@ world {
     word-wrap: normal;
     margin-top: 1em;
     margin-bottom: 3em;
-    text-align: center;
+    text-align: left;
     width: 100%;
     padding-left: 1em;
     background: #F8F8F8 
