--- a/Durer_Story/css/durer.css
+++ b/Durer_Story/css/durer.css
@@ -156,7 +156,7 @@ td {
     font-size: 15px;
     padding: 25px;
     vertical-align: center;
-    text-align: center;
+    text-align: left;
     width: 200px;
     width: 200px;
 }
