Durer Story Update

--- a/Durer_Story/css/durer.css
+++ b/Durer_Story/css/durer.css
@@ -162,6 +162,14 @@ td {
     width: 200px;
 }
 
+td.history {
+    font-size: 15px;
+    padding: 25px;
+    vertical-align: center;
+    text-align: left;
+    width: 200px;
+    width: 200px;
+}
 
 timeline{
     font-size: 10px;
